--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 info.app.name=Hackathon SOS System
 info.app.description=This is SOS Management
+sms.service.api.key=155284ACMstw01qxL5937be02
+sms.service.sender=SMSCOUNTRY
+sms.service.receiver.mdn=918007530200
+sms.service.destination.country=91
+sms.service.route=1
+sms.service.delivery.message=There has been an accident at 
+siemens.proxy.host=tok-fsrprx.net.plm.eds.com
+siemens.proxy.port=3128
+siemens.username=hgskv8
+siemens.user.pwd=Asd3467erty$
+sms.service.api.username=amitkarir
+sms.service.api.pwd=92341478
+sms.service.api.get.uri=api.smscountry.com/SMSCwebservice_bulk.aspx
+sms.service.map.uri=http://maps.google.com/?q=
