--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ plugins {
 
 // Apply the java-library plugin to add support for Java Library
 // apply plugin: 'java-library'
+apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 apply plugin: "io.spring.dependency-management"
 
@@ -35,7 +36,7 @@ apply plugin: "io.spring.dependency-management"
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    //jcenter()
     mavenCentral()
 }
 
@@ -53,7 +54,7 @@ dependencies {
     compile ("org.projectlombok:lombok:1.16.16")
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
-    compile 'net.sf.json-lib:json-lib:2.4'
+    //compile 'net.sf.json-lib:json-lib:2.4'
 }
 
 
