--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ plugins {
 
 // Apply the java-library plugin to add support for Java Library
 // apply plugin: 'java-library'
-apply plugin: 'war'
+//apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 apply plugin: "io.spring.dependency-management"
 
@@ -36,7 +36,7 @@ apply plugin: "io.spring.dependency-management"
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    //jcenter()
+    jcenter()
     mavenCentral()
 }
 
@@ -46,15 +46,20 @@ dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
 //    api 'org.apache.commons:commons-math3:3.6.1'
 
-	compile ("org.springframework.boot:spring-boot-starter")
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
-	runtime('com.h2database:h2')
+                compile ("org.springframework.boot:spring-boot-starter")
+                compile('org.springframework.boot:spring-boot-starter-web')
+                compile('org.springframework.boot:spring-boot-starter-data-jpa')
+                compile('org.springframework.boot:spring-boot-starter-data-rest')
+                runtime('com.h2database:h2')
     compile ("org.projectlombok:lombok:1.16.16")
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+                compile group: 'net.sf.ezmorph', name: 'ezmorph', version: '1.0.4'
+                compile group: 'commons-lang', name: 'commons-lang', version: '2.2'
+                compile group: 'commons-collections', name: 'commons-collections', version: '3.2.1'
+                compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.8.3'
     //compile 'net.sf.json-lib:json-lib:2.4'
 }
+
 
 
